# assistify

./: .env.default  Dockerfile  PRODUCT_DEFINITION.md  README.md  app.py  docker-compose.yml  fly.toml  pyproject.toml  server.py
.github/: vercel-deploy.yml
.github/workflows/: agent-assistify-product-owner-build.yml  agent-assistify-product-owner-repeat-integration-tests.yml  assistant-build.yml  build-agent-assistify-product-owner.yml  continuous-integration.yml  end-to-end-integration.yml  fly-deploy.yml  vercel-deploy.yml
agents/: README.md
agents/assistify-concierge/: .env.default  README.md  data_exporter.py  pyproject.toml
agents/assistify-concierge/data/Assistify Status Trello Board/: 002 Assistify Trello Status DOING.txt
agents/assistify-concierge/data/files/: Assistify Concierge README.txt
agents/assistify-concierge/prompts/: prompt.md
agents/assistify-product-owner/: README.md  data_exporter.py  pyproject.toml  run_build.py  run_chat.py  run_end_to_end.py
agents/assistify-product-owner/assistify_product_owner/prompts/: _prompt.md  prompt.md  prompt.py  prompt_test.py
agents/assistify-product-owner/data/Assistify Status Trello Board/: 000 Assistify Trello Status BACKLOG.txt  001 Assistify Trello Status TODO.txt  002 Assistify Trello Status DOING.txt  003 Assistify Trello Status DONE.txt
agents/assistify-product-owner/data/files/: Assistify Product Owner README.txt  assistify-product-owner-README.txt
agents/assistify-product-owner/data/files/code/: ai-assistant-manager.txt  assistify-api.txt  assistify-product-owner.txt  assistify-ui.txt
agents/assistify-product-owner/integration/: conftest.py  run_chat_test.py
agents/assistify-product-owner/prompts/: prompt.md
agents/assistify-product-owner/tools/: tools.json
agents/warm-intro-ai/: README.md  data_exporter.py  pyproject.toml
agents/warm-intro-ai/data/files/: Warm Intro AI README.txt
assistify-api/: .env.default  .env.test  Dockerfile  README.md  pyproject.toml
assistify-api/assistify_api/: conftest.py  env_variables.py  env_variables_test.py
assistify-api/assistify_api/app/: api.py  api_router.py  api_test.py  app_test.py  lifespan.py
assistify-api/assistify_api/app/assistants/: assistants_router.py  assistants_router_test.py  assistants_service.py  assistants_service_test.py  available_assistants.py  list_assistants_response.py
assistify-api/assistify_api/app/auth/: user.py  verify_token.py  verify_token_test.py
assistify-api/assistify_api/app/chat/: send_message.py
assistify-api/assistify_api/app/dependencies/: api_dependencies.py  api_dependencies_test.py
assistify-api/assistify_api/app/messages/: messages_router.py  messages_router_test.py  messages_service.py  messages_service_test.py  send_message.py
assistify-api/assistify_api/app/threads/: thread.py  threads_router.py  threads_router_test.py  threads_service.py  threads_service_test.py
assistify-api/assistify_api/app/users/: users_response.py  users_router_test.py  users_service.py  users_service_test.py
assistify-api/assistify_api/database/: handle_migrations.py  mongodb.py  mongodb_test.py  version_control_wrapper.py  version_control_wrapper_test.py
assistify-api/assistify_api/database/dao/: assistants_dao.py  assistants_dao_test.py  conftest.py  dao.py  dao_test.py  threads_dao.py  threads_dao_test.py  users_dao_test.py  version_dao.py  version_dao_test.py
assistify-api/assistify_api/database/migrations/: v001_add_assistants.py  v001_hello_world.py  v002_add_assistants.py
assistify-api/assistify_api/database/models/: assistant.py  base.py  message.py  thread.py  user.py  version.py
assistify-api/assistify_api/services/: chat.py  chat_test.py  threads_service.py  threads_service_test.py
assistify-api/assistify_api/timer/: timer_test.py
assistify-api/src/app/: api.py  app_test.py
assistify-api/src/app/cors/: custom_coors_middleware.py  custom_cors_middlewar_test.py  custom_cors_middleware.py
assistify-ui/: .env.default  .gitignore  README.md  jest.config.ts  package.json  playwright.config.ts
assistify-ui/e2e/: assistants.steps.ts  dashboard.steps.ts  login.spec.ts  login.steps.ts  smoke-test.spec.ts  storageStateHelper.ts  user-details.steps.ts
assistify-ui/src/app/: page.tsx
assistify-ui/src/components/: AboutAssistify.test.tsx  AboutAssistify.tsx  AssistifyHead.tsx  AssistifyLogo.tsx  GoogleLogo.tsx  HelloWorld.test.tsx  Message.test.tsx  Message.tsx  Protected.tsx
assistify-ui/src/components/about/: AboutAssistify.tsx  FeatureItem.test.tsx  FeatureItem.tsx  SectionCard.test.tsx  SectionCard.tsx
assistify-ui/src/components/assistants/: AssistantCard.test.tsx  AssistantCard.tsx  AssistantDescription.tsx  AssistantDetailsDialog.test.tsx  AssistantDetailsDialog.tsx  AssistantImageModal.tsx  AssistantStatusIcon.tsx
assistify-ui/src/components/common/: AssistifyHead.test.tsx  AssistifyHead.tsx  BaseCard.test.tsx  BaseCard.tsx  ChatMessage.test.tsx  ChatMessage.tsx  Header.test.tsx  Header.tsx  LoadingSkeleton.test.tsx  LoadingSkeleton.tsx  PageSkeleton.test.tsx  PageSkeleton.tsx  StyledCard.test.tsx  StyledCard.tsx  WelcomeMessage.test.tsx  WelcomeMessage.tsx
assistify-ui/src/components/dashboard/: AppBar.tsx  (+9 more)
assistify-ui/src/hooks/: useAuthRedirect.ts  useMobile.ts  useShowMenu.ts  useTokenRefresh.ts
assistify-ui/src/pages/: _app.tsx  _login.tsx  about.tsx  assistants.tsx  dashboard.tsx  index.tsx  login.tsx  user.tsx
assistify-ui/src/services/: assistants.test.ts  assistants.ts  axiosInstance.ts  axiosInstants.test.tsx  messages.ts  service.ts
assistify-ui/src/styles/: globals.css  theme.ts
assistify-ui/src/types/: AssistifyApiTypes.ts  AssistifyTypes.ts
src/app/: api.py
(+12 files in other folders)
